<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".view.activity.MainActivity">

    <Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="25dp"
        android:paddingEnd="35dp"
        android:paddingStart="0dp"
        android:background="@drawable/hiasan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="28sp"
            android:shadowColor="@color/green3"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            />
    </Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/info_diabetes"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardBackgroundColor="@color/green1"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="About Background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/diabetes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto"
                    android:shadowColor="@color/black"
                    android:shadowRadius="2"
                    android:text="@string/diabetes"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/predict"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/green1"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="@+id/info_diabetes"
            app:layout_constraintStart_toStartOf="@+id/info_diabetes"
            app:layout_constraintTop_toBottomOf="@id/info_diabetes" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="About Background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/prediksi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto"
                    android:shadowColor="@color/black"
                    android:shadowRadius="4"
                    android:text="@string/predict"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/about"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="@+id/predict"
            app:layout_constraintStart_toStartOf="@+id/predict"
            app:layout_constraintTop_toBottomOf="@+id/predict">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="About Background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto"
                    android:shadowColor="@color/black"
                    android:shadowRadius="5"
                    android:text="@string/about"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>